bug 18550 - fix 1px left-jump on active node selection
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@18522 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -776,7 +776,7 @@ hbox.servicepane-node-badges {
 
 sb-servicepane-node.active > vbox > hbox.servicepane-node-info > stack > hbox > hbox.servicepane-node-badges,
 sb-servicepane-node.highlighted > vbox > hbox.servicepane-node-info > stack > hbox > hbox.servicepane-node-badges {
-  margin-right: 0px;
+  margin-right: -1px;
 }
 
 /* Badge Text labels */
